fix: fix z-index issue; fix inputs

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -8,6 +8,7 @@
     border-bottom: 1px solid var(--strokes-secondady);
     position: sticky;
     top: 0;
+    z-index: 1;
 }
 
 .logoContainer {
